--- a/verificacion.Rmd
+++ b/verificacion.Rmd
@@ -1,38 +1,40 @@
 ---
-title: "verificacion"
+title: "Verificacion mediciones con normativa"
 author: "monica"
-date: "9/17/2020"
+date: "10/27/2020"
 output: html_document
 ---
-
-
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-#NOTAS: agregar la columna que falta por analizar  dentro de los parametros
+#FILE
 ```{r}
-library(readxl)
-datos<-SECU_Y_MEGIA_query_v1
+library(readxl) 
+#library("xlsx")
+datos<-MEGIA_query_v3_
 #datos <- read_excel("CORRELACION_v4.xlsx")
+```
+#cargar tabla de las resoliciones con los límies permisibles 2020
+```{r}
 limites  <- read_excel("Parametros_limites.xlsx", 
     sheet = "depurados")
 ```
+#Vectores con los limites
 ```{r}
-minimos<-limites[,c(1,2,((1:9)*2)+1)]
-maximos<-limites[,c(1,(1:10)*2)]
+minimos<-limites[,c("PARAMETRO","UNIDAD DE MEDIDA","min3","min4","min5","min6","min7","min8","Min10f","min10c","min10m","min_1207_agricola","min_1207_zonas_verdes",	"min_1207_In_calor"	,	 "min_1207_ind_limpieza"	)]
+maximos<-limites[,c("PARAMETRO","UNIDAD DE MEDIDA","max3","max4","max5","max6","max7","max8","Max10f","max10c","max10m","max_1207_agricola","max_1207_zonas_verdes",	"max_1207_In_calor"	,	 "max_1207_ind_limpieza")]
 ```
-
-
-
+#Parametros a ser evaluados en la tabla limites
 ```{r}
 parametros<-unique(limites$PARAMETRO)
 print(parametros)
 ```
+#parametros a ser evaluados en la base de datos
 ```{r}
 parametros2<-unique(datos$MASCARA_PARAMETRO)
 print(parametros2)
 ```
-
+#verificacion que la en la base de datos esten los parametros a ser evaluados en la normaativa TRUE//FALSE
 ```{r}
 for (i in parametros2)
   {
@@ -40,40 +42,41 @@ for (i in parametros2)
   }
 
 ```
-
-
-
+#Verficicacion
 ```{r}
-vermin<-minimos[minimos$PARAMETRO==datos[1,]$MASCARA_PARAMETRO,c(3:11)]<as.numeric(datos[1,]$SinAtipicos)
-vermax<-maximos[maximos$PARAMETRO==datos[1,]$MASCARA_PARAMETRO,c(3:11)]>as.numeric(datos[1,]$SinAtipicos)
-total<-cbind(datos[1,c("ID_MUESTRA","SinAtipicos")],vermin,vermax)
+#Inicializar data frame Normativa
+Normativa<-cbind(datos[1,c("ID_MUESTRA","MASCARA_PARAMETRO","SinAtipicos")],vermin,vermax)
 
+#llenado de data frame
 for (i in c(2:nrow(datos)))
   {
       if(datos[i,]$MASCARA_PARAMETRO %in% unique(limites$PARAMETRO))
         {
-        vermin<-minimos[minimos$PARAMETRO==datos[i,]$MASCARA_PARAMETRO,c(3:11)]<as.numeric(datos[i,]$SinAtipicos)
-        vermax<-maximos[maximos$PARAMETRO==datos[i,]$MASCARA_PARAMETRO,c(3:11)]>as.numeric(datos[i,]$SinAtipicos)
-        union<-cbind(datos[i,c("ID_MUESTRA","SinAtipicos")],vermin,vermax)
-        total=rbind(total,union)
+        vermin<-minimos[minimos$PARAMETRO==datos[i,]$MASCARA_PARAMETRO,c(3:length(minimos))]<as.numeric(datos[i,]$SinAtipicos)
+        vermax<-maximos[maximos$PARAMETRO==datos[i,]$MASCARA_PARAMETRO,c(3:length(maximos))]>as.numeric(datos[i,]$SinAtipicos)
+        union<-cbind(datos[i,c("ID_MUESTRA","MASCARA_PARAMETRO","SinAtipicos")],vermin,vermax)
+        Normativa=rbind(Normativa,union)
       }
       else{
           vermin<-data.frame("min3"="NA","min4"="NA","min5"="NA","min6"="NA","min7"="NA","min8"="NA",
-                             "Min10f"="NA","min10c"="NA","min10m"="NA")
+                             "Min10f"="NA","min10c"="NA","min10m"="NA","min_1207_agricola"="NA","min_1207_zonas_verdes"="NA",	"min_1207_In_calor"	="NA",	 "min_1207_ind_limpieza"="NA")
+          
           vermax<-data.frame("max3"="NA","max4"="NA","max5"="NA","max6"="NA","max7"="NA","max8"="NA",
-                             "Max10f"="NA","max10c"="NA","max10m"="NA")
+                             "Max10f"="NA","max10c"="NA","max10m"="NA","max_1207_agricola"="NA","max_1207_zonas_verdes"="NA",	"max_1207_In_calor"="NA"	,	 "max_1207_ind_limpieza"="NA")
   
-          union<-cbind(datos[i,c("ID_MUESTRA","SinAtipicos")],vermin,vermax)
-          total=rbind(total,union)
+          union<-cbind(datos[i,c("ID_MUESTRA","MASCARA_PARAMETRO","SinAtipicos")],vermin,vermax)
+          Normativa=rbind(Normativa,union)
          }
     }
 
 ```
-
+#drop na from data frame
 ```{r}
-write.csv(cbind(datos,total),"SECUNDARIA_CORRELACION_v9_VERIFICADO_V1.csv", row.names = TRUE)
+datos_informe<-cbind(datos,Normativa)
+datos_informe<-datos_informe[!is.na(datos_informe$min3),]
+datos_informe <- datos_informe[datos_informe$min3!="NA",]
 ```
-
-
-
-
+#Exportar
+```{r}
+write.csv(datos_informe,"./Verificacion/Megia_query_v3_normativa.csv", row.names = TRUE)
+```
