--- a/r informes.Rmd
+++ b/r informes.Rmd
@@ -12,20 +12,15 @@ knitr::opts_chunk$set(echo = TRUE)
 library("xlsx")
 library("openxlsx")
 ```
-
 ```{r}
 data <- data.frame(lapply(normativa, function(x) {gsub("TRUE", "✓", x)}))
 data <- data.frame(lapply(data, function(x) {gsub("FALSE", "NO", x)}))
 
 ```
-
-
-
 #Extraer nombres unicos de las muestras
 ```{r}
 lista_muestras<-unique(data$ID_MUESTRA)
 ```
-
 ```{r}
 # create a new workbook for outputs
 # possible values for type are : "xls" and "xlsx"
@@ -47,12 +42,12 @@ for  (i in  lista_muestras){
         "Dec 1076 2015 2.2.3.3.9.7 uso recreativo contacto primario","",
         "Dec 1076 2015 2.2.3.3.9.8 uso recreativo contacto secundario","",
         "Dec 1076 2015 2.2.3.3.9.10 uso preservación flora fauna Agua fría dulce","",
-        "Dec 1076 2015 2.2.3.3.9.10 uso preservación flora fauna Agua cálida dulce","",
-        "Dec 1076 2015 2.2.3.3.9.10 uso preservación flora fauna Agua marina estuarina","",
-        "Res 1207 2014 6.1 uso agrícola","",
-        "Res 1207 2014 6.1 Zonas verdes (parques y campos deportivos)","",
-        "Res 1207 2014 6.1 Intercambio de calor en torres de enfriamiento y calderas","",
-        "Res 1207 2014 6.1 Limpieza y riego de vias para control de material particulado",""
+        "Dec 1076 2015 2.2.3.3.9.10 uso preservación flora fauna Agua cálida dulce",""#,
+        #"Dec 1076 2015 2.2.3.3.9.10 uso preservación flora fauna Agua marina estuarina","",
+        #"Res 1207 2014 6.1 uso agrícola","",
+        #"Res 1207 2014 6.1 Zonas verdes (parques y campos deportivos)",""#,
+        #"Res 1207 2014 6.1 Intercambio de calor en torres de enfriamiento y calderas","",
+        #"Res 1207 2014 6.1 Limpieza y riego de vias para control de material particulado",""
         ),nrow = 1),colNames = FALSE)
     mergeCells(archivo_excel, i, cols = (3:4), rows = 2)
     mergeCells(archivo_excel, i, cols = (5:6), rows = 2)
@@ -62,35 +57,25 @@ for  (i in  lista_muestras){
     mergeCells(archivo_excel, i, cols = (13:14), rows = 2)
     mergeCells(archivo_excel, i, cols = (15:16), rows = 2)
     mergeCells(archivo_excel, i, cols = (17:18), rows = 2)
-    mergeCells(archivo_excel, i, cols = (19:20), rows = 2)
-    mergeCells(archivo_excel, i, cols = (21:22), rows = 2)
-    mergeCells(archivo_excel, i, cols = (23:24), rows = 2)
-    mergeCells(archivo_excel, i, cols = (25:26), rows = 2)
-    mergeCells(archivo_excel, i, cols = (27:28), rows = 2)
-    mergeCells(archivo_excel, i, cols = (29:30), rows = 2)
-    mergeCells(archivo_excel, i, cols = (31:32), rows = 2)
+    #mergeCells(archivo_excel, i, cols = (19:20), rows = 2)
+    #mergeCells(archivo_excel, i, cols = (21:22), rows = 2)
+    #mergeCells(archivo_excel, i, cols = (23:24), rows = 2)
+    #mergeCells(archivo_excel, i, cols = (25:26), rows = 2)
+    #mergeCells(archivo_excel, i, cols = (27:28), rows = 2)
+    #mergeCells(archivo_excel, i, cols = (29:30), rows = 2)
+    #mergeCells(archivo_excel, i, cols = (31:32), rows = 2)
   
   
- writeData(archivo_excel,i,xy=c(1,3),x=matrix(c("PARAMETRO", "VALOR", "min", "max", "min", "max", "min", "max", "min", "max", "min", "max", "min", "max", "min", "max", "min", "max", "min","max", "min","max", "min","max", "min","max", "min","max"),nrow = 1),colNames = FALSE)
- datos_filtro<-data[data$ID_MUESTRA==i,c("MASCARA_PARAMETRO","SinAtipicos","min3","max3","min4","max4","min5","max5","min6","max6","min7","max7","min8","max8","Min10f","Max10f" , "min10c",  "max10c" ,  "min10m" ,"max10m","min_1207_agricola","max_1207_agricola","min_1207_zonas_verdes","max_1207_zonas_verdes","min_1207_In_calor","max_1207_In_calor","min_1207_ind_limpieza","max_1207_ind_limpieza")]
+ writeData(archivo_excel,i,xy=c(1,3),x=matrix(c("PARAMETRO", "VALOR", "min", "max", "min", "max", "min", "max", "min", "max", "min", "max", "min", "max", "min", "max", "min", "max"#, "min","max", "min","max", "min","max", "min","max", "min","max"
+                                                ),nrow = 1),colNames = FALSE)
+ datos_filtro<-data[data$ID_MUESTRA==i,c("MASCARA_PARAMETRO","VALOR2","min3","max3","min4","max4","min5","max5","min6","max6","min7","max7","min8","max8","Min10f","Max10f" , "min10c",  "max10c"
+                                         #,  "min10m" ,"max10m","min_1207_agricola","max_1207_agricola","min_1207_zonas_verdes","max_1207_zonas_verdes","min_1207_In_calor","max_1207_In_calor","min_1207_ind_limpieza","max_1207_ind_limpieza"
+                                         )]
  datos_filtro<-datos_filtro[order(datos_filtro$"MASCARA_PARAMETRO"),]
   writeData(archivo_excel,i,xy=c(1,4),x=datos_filtro,colNames = FALSE,rowNames = FALSE)
 
    }
 ```
-
-
-
-
-
-
-
 ```{r}
 saveWorkbook(archivo_excel,file= "ejemplo.xlsx",overwrite=TRUE)
 ```
-
-
-
-
-
-
